2004-01-10  Jackson Harper <jackson@ximian.com>

	* TraceData.cs: New class for storing trace data. Data is stored
	here instead of the trace context so it can be saved and accessed
	from the trace handler.
	* TraceContext.cs: Save data in the TraceData object, let the
	trace data object handle the rendering.
	
2004-01-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: use ContentEncoding for QueryString. Fixes bug #52577.
	Thanks to Jan Jaros (mono-bug@jerryweb.info).

	* HttpRequestValidationException.cs: fix comment.

2004-01-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpException.cs: default to error 500. Fixes bug #52623.

2004-01-04  Jackson Harper <jackson@ximian.com>

	* TraceContext.cs: Store and render trace info times. Also render
	cookie sizes. Remove debug code.
	
2004-01-04  Jackson Harper <jackson@ximian.com>

	* HttpResponse.cs: Set the cached response date header so it can
	be updated.
	* HttpResponseHeader.cs: Let values be set so we can update cached 
	response header values.
	
2004-01-04  Jackson Harper <jackson@ximian.com>

	* HttpResponse.cs: Implement RemoveOutputCacheItem.
	
2004-01-04  Jackson Harper <jackson@ximian.com>

	* HttpCachePolicy.cs: Add internal method to get the vary by custom string
	* HttpCacheVaryByHeaders.cs: Add internal method to get the header names.
	
2004-01-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRuntime.cs: implemented MachineConfigurationDirectory,

2004-1-1  Alon Gazit <along@mainsoft.com>
	* HttpWriter.cs: add check in Write() in order to prevent
	NullReferenceException.

2004-1-1  Alon Gazit <along@mainsoft.com>
	* HttpResponse.cs: implemented ExpiresAbsolute and Expires.

2003-12-18  Jackson Harper <jackson@ximian.com>

	* TraceContext.cs: Write () methods are not warnings.
	
2003-12-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpBrowserCapabilities.cs: added GetClrVersions ().
	* HttpCachePolicy.cs: added SetAllowResponseInBrowserHistory ().